--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 										</label>
 										<label class="checkbox" for="pickup_discount">
 											<input type="checkbox" id="pickup_discount" name="pickup_discount" />
-											Rabatt für Selbstabholer 50€
+											Rabatt für Selbstabholer, 50€
 										</label>
 										<input type="hidden" name="product_photobox" value="on" />
 									</div>
