--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
 
 			<!-- Header -->
 				<section id="header">
-
-					<!-- Logo -->
-						<!-- <h1><a href="index.html">PhotoBox EBE</a></h1> -->
-
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
@@ -72,7 +68,7 @@
 							</div>
 							<footer>
 								<ul class="actions">
-									<li><a href="#services" class="button large">Gleich anfragen</a></li>
+									<li><a href="#contact" class="button large">Gleich anfragen</a></li>
 									<li><a href="#services" class="button alt large">Unsere Services</a></li>
 								</ul>
 							</footer>
@@ -191,7 +187,7 @@
 									<div class="col-6 col-12-small"><input type="email" name="email" placeholder="E-Mail-Adresse" /></div>
 									<div class="col-6 col-12-small"><input type="date" name="date" placeholder="Datum" /></div>
 									<div class="col-12"><textarea name="message" placeholder="Nachricht / Eventdetails" rows="6"></textarea></div>
-									<div class="col-12">
+									<div class="col-12 checkboxes">
 										<label class="checkbox" for="product_photobox">
 											<input type="checkbox" id="product_photobox" name="product_photobox" checked disabled />
 											Fotobox, 199€
@@ -351,7 +347,9 @@
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Fabian Färber. All rights reserved.</li>
+											<li><a href="#">Impressum</a></li>
+											
 										</ul>
 									</div>
 
