--- a/index.html
+++ b/index.html
@@ -163,20 +163,25 @@
 						<p>Schreibt uns und reserviert eure Fotobox für Hochzeit, Geburtstag oder Firmenfeier. Wir freuen uns auf eure Nachricht!</p>
 					</header>
 					<section class="box contact">
-						<form method="post" action="#">
+						<form name="kontakt" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+							<input type="hidden" name="form-name" value="kontakt" />
+							<p style="display:none">
+								<label>Don’t fill this out: <input name="bot-field" /></label>
+							</p>
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-6 col-12-small"><input type="text" name="name" placeholder="Name" required /></div>
 								<div class="col-6 col-12-small"><input type="email" name="email" placeholder="E-Mail-Adresse" required /></div>
 								<div class="col-6 col-12-small"><input type="date" name="date" placeholder="Datum" required /></div>
 								<div class="col-12"><textarea name="message" placeholder="Nachricht / Eventdetails" rows="6"></textarea></div>
 								<div class="col-12 checkboxes">
+									<input type="hidden" name="package" value="Fotobox, 199€" />
 									<label class="checkbox"><input type="checkbox" checked disabled /> Fotobox, 199€</label>
-									<label class="checkbox"><input type="checkbox" /> Lustige Accessoires, 19€</label>
-									<label class="checkbox"><input type="checkbox" /> Mit Overlay, 29€</label>
-									<label class="checkbox"><input type="checkbox" /> Drucker (100 Bilder), 79€</label>
-									<label class="checkbox"><input type="checkbox" /> 100 Bilder zusätzlich, 59€</label>
-									<label class="checkbox"><input type="checkbox" /> 200 Bilder zusätzlich, 99€</label>
-									<label class="checkbox"><input type="checkbox" /> Rabatt für Selbstabholer, -50€</label>
+									<label class="checkbox"><input type="checkbox" name="add_accessories" value="Lustige Accessoires, 19€" /> Lustige Accessoires, 19€</label>
+									<label class="checkbox"><input type="checkbox" name="add_overlay" value="Mit Overlay, 29€" /> Mit Overlay, 29€</label>
+									<label class="checkbox"><input type="checkbox" name="add_printer_100" value="Drucker (100 Bilder), 79€" /> Drucker (100 Bilder), 79€</label>
+									<label class="checkbox"><input type="checkbox" name="add_100_extra" value="100 Bilder zusätzlich, 59€" /> 100 Bilder zusätzlich, 59€</label>
+									<label class="checkbox"><input type="checkbox" name="add_200_extra" value="200 Bilder zusätzlich, 99€" /> 200 Bilder zusätzlich, 99€</label>
+									<label class="checkbox"><input type="checkbox" name="self_pickup_discount" value="Rabatt für Selbstabholer, -50€" /> Rabatt für Selbstabholer, -50€</label>
 								</div>
 							</div>
 							<ul class="actions special">
