formular not working

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 						<p>Schreibt uns und reserviert eure Fotobox für Hochzeit, Geburtstag oder Firmenfeier. Wir freuen uns auf eure Nachricht!</p>
 					</header>
 					<section class="box contact">
-						<form name="kontakt" method="POST" action="/success.html" data-netlify="true" netlify-honeypot="bot-field">
+						<!-- action="/success.html"  -->
+						<form name="kontakt" method="POST" data-netlify="true" netlify-honeypot="bot-field">
 							<input type="hidden" name="form-name" value="kontakt" />
 							<p style="display:none">
 								<label>Don’t fill this out: <input name="bot-field" /></label>
