--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
 						<p>Schreibt uns und reserviert eure Fotobox für Hochzeit, Geburtstag oder Firmenfeier. Wir freuen uns auf eure Nachricht!</p>
 					</header>
 					<section class="box contact">
-						<!-- action="/success.html"  -->
-						<form name="kontakt" method="POST" data-netlify="true" netlify-honeypot="bot-field">
-							<input type="hidden" name="form-name" value="kontakt" />
-							<p style="display:none">
-								<label>Don’t fill this out: <input name="bot-field" /></label>
-							</p>
+						<form name="kontakt" method="POST" action="https://formsubmit.co/faerberfabian@googlemail.com">
+							<input type="hidden" name="_next" value="/success.html" />
+							<input type="hidden" name="_subject" value="Neue Anfrage – PhotoBox EBE" />
+							<input type="hidden" name="_template" value="table" />
+							<input type="hidden" name="_captcha" value="false" />
+							<input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off" />
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-6 col-12-small"><input type="text" name="name" placeholder="Name" required /></div>
 								<div class="col-6 col-12-small"><input type="email" name="email" placeholder="E-Mail-Adresse" required /></div>
