--- a/index.html
+++ b/index.html
@@ -1,169 +1,196 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>PhotoBox EBE – Deine Erinnerungen. Echt. Unvergesslich.</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
 
-	<body class="homepage is-preload">
-		<div id="page-wrapper">
-				<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="#services">Services</a></li>
-						<li><a href="#gallery">Galerie</a></li>
-						<li><a href="#contact" class="button">Jetzt anfragen</a></li>
-					</ul>
-			</nav>
-			<!-- Header -->
-			<section id="header">
+<head>
+	<title>PhotoBox EBE – Deine Erinnerungen. Echt. Unvergesslich.</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="homepage is-preload">
+	<div id="page-wrapper">
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="#services">Services</a></li>
+				<li><a href="#gallery">Galerie</a></li>
+				<li><a href="#contact" class="button">Jetzt anfragen</a></li>
+			</ul>
+		</nav>
+		<!-- Header -->
+		<section id="header">
 
 
-				<!-- Banner -->
-				<section id="banner">
-					<header>
-						<h2>PhotoBox EBE</h2>
-						<p>Wo Spaß, Lachen und echte Erinnerungen entstehen.</p>
-					</header>
-				</section>
-
-				<!-- Intro -->
-				<section id="intro" class="container">
-					<div class="row">
-						<div class="col-4 col-12-medium">
-							<section class="first">
-								<i class="icon solid featured fa-print"></i>
-								<header>
-									<h2>Tolle Fotos vor Ort</h2>
-								</header>
-								<p>Mit unserem <strong>professionellen Fotodrucker</strong> haltet ihr eure Lieblingsmomente direkt in den Händen – gestochen scharf, farbintensiv und sofort bereit zum Mitnehmen.</p>
-							</section>
-						</div>
-						<div class="col-4 col-12-medium">
-							<section class="middle">
-								<i class="icon solid featured alt fa-bolt"></i>
-								<header>
-									<h2>Schnell aufgebaut,<br>kinderleicht zu bedienen</h2>
-								</header>
-								<p>Stecker rein, Blitz anschließen – fertig! Unsere Fotobox ist in wenigen Minuten startklar und so einfach zu bedienen, dass wirklich jeder Spaß daran hat.</p>
-							</section>
-						</div>
-						<div class="col-4 col-12-medium">
-							<section class="last">
-								<i class="icon solid featured alt2 fa-wifi"></i>
-								<header>
-									<h2>Sofort aufs Handy</h2>
-								</header>
-								<p>Einfach lächeln, klicken – und euer Foto direkt per QR-Code aufs Smartphone laden und teilen. So bleiben die schönsten Momente gleich doppelt in Erinnerung.</p>
-							</section>
-						</div>
-					</div>
-
-				</section>
-
+			<!-- Banner -->
+			<section id="banner">
+				<header>
+					<h2>PhotoBox EBE</h2>
+					<p>Wo Spaß, Lachen und echte Erinnerungen entstehen.</p>
+				</header>
 			</section>
 
-			<!-- Main -->
-			<section id="main">
-				<div class="container">
-					<div class="row">
-						<div class="col-12">
-
-							<!-- Services -->
-							<section id="services">
-								<header class="major">
-									<h2>Unsere Services</h2>
-									<p>Mehr als nur eine Fotobox – wir liefern euch das Rundum-Sorglos-Paket für Spaß, Stil und bleibende Erinnerungen.</p>
-								</header>
-								<div class="row">
-									<div class="col-6 col-6-medium col-12-small">
-										<section class="box">
-											<a href="#" class="image featured"><img src="images/package-1511683_1280.jpg" alt="" /></a>
-											<header>
-												<h3>Aufbauservice</h3>
-											</header>
-											<p>Wir liefern, bauen auf und holen wieder ab – ganz ohne Stress. Ihr müsst euch um nichts kümmern, außer darum, gute Laune zu haben. So entspannt war Erinnerungen sammeln noch nie!</p>
-										</section>
-									</div>
-									<div class="col-6 col-6-medium col-12-small">
-										<section class="box">
-											<a href="#" class="image featured"><img src="images/overlay_wedding.jpg" alt="" /></a>
-											<header>
-												<h3>Individuelle Overlays</h3>
-											</header>
-											<p>Gebt euren Fotos den letzten Schliff! Wählt aus liebevoll gestalteten Vorlagen oder bekommt ein personalisiertes Design, das perfekt zu eurem Event passt.</p>
-										</section>
-									</div>
-									<div class="col-6 col-6-medium col-12-small">
-										<section class="box">
-											<a href="#" class="image featured"><img src="images/Drucker.png" alt="" /></a>
-											<header>
-												<h3>Professioneller Fotodrucker</h3>
-											</header>
-											<p>Mit unserem Fotodrucker in Studioqualität entstehen bis zu <strong>400 brillante Ausdrucke</strong> direkt vor Ort – gestochen scharf, langlebig und perfekt für euer Gästebuch oder zum Mitnehmen.</p>
-										</section>
-									</div>
-									<div class="col-6 col-6-medium col-12-small">
-										<section class="box">
-											<a href="#" class="image featured"><img src="images/Accessoirs.jpg" alt="" /></a>
-											<header>
-												<h3>Lustige Accessoires</h3>
-											</header>
-											<p>Ob Brillen, Hüte oder Schilder – unsere Accessoires machen jede Aufnahme einzigartig. Hier entstehen keine 08/15-Fotos, sondern echte Erinnerungen voller Spaß und Persönlichkeit!</p>
-										</section>
-									</div>
-								</div>
-							</section>
-
-						</div>
-
-						<!-- Galerie -->
-						<div class="col-12">
-							<section id="gallery">
-								<header class="major">
-									<h2>Galerie</h2>
-									<p>Echte Lacher. Echte Emotionen. Echte Erinnerungen.</p>
-								</header>
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<section>
-											<a href="images/pexels-shkrabaanthony-7507067.jpg" class="image featured"><img src="images/pexels-shkrabaanthony-7507067.jpg" alt="Fotobox Party" /></a>		
-										</section>
-									</div>
-									<div class="col-6 col-12-small">
-										<section>
-											<a href="images/overlay_wedding_withBG.jpg" class="image featured"><img src="images/overlay_wedding_withBG.jpg" alt="Fotobox Hochzeit" /></a>
-										</section>
-									</div>
-									<div class="col-6 col-12-small">
-										<section>
-											<a href="images/party-balloons-in-front-of-faces.jpg" class="image featured"><img src="images/party-balloons-in-front-of-faces.jpg" alt="Fotobox Spaß" /></a>		
-										</section>
-									</div>
-									<div class="col-6 col-12-small">
-										<section>
-											<a href="images/pexels-polina-tankilevitch-5848780.jpg" class="image featured"><img src="images/pexels-polina-tankilevitch-5848780.jpg" alt="Fotobox Event" /></a>
-										</section>
-									</div>
-								</div>
-							</section>
-						</div>
+			<!-- Intro -->
+			<section id="intro" class="container">
+				<div class="row">
+					<div class="col-4 col-12-medium">
+						<section class="first">
+							<i class="icon solid featured fa-print"></i>
+							<header>
+								<h2>Tolle Fotos vor Ort</h2>
+							</header>
+							<p>Mit unserem <strong>professionellen Fotodrucker</strong> haltet ihr eure Lieblingsmomente
+								direkt in den Händen – gestochen scharf, farbintensiv und sofort bereit zum Mitnehmen.
+							</p>
+						</section>
+					</div>
+					<div class="col-4 col-12-medium">
+						<section class="middle">
+							<i class="icon solid featured alt fa-bolt"></i>
+							<header>
+								<h2>Schnell aufgebaut,<br>kinderleicht zu bedienen</h2>
+							</header>
+							<p>Stecker rein, Blitz anschließen – fertig! Unsere Fotobox ist in wenigen Minuten startklar
+								und so einfach zu bedienen, dass wirklich jeder Spaß daran hat.</p>
+						</section>
+					</div>
+					<div class="col-4 col-12-medium">
+						<section class="last">
+							<i class="icon solid featured alt2 fa-wifi"></i>
+							<header>
+								<h2>Sofort aufs Handy</h2>
+							</header>
+							<p>Einfach lächeln, klicken – und euer Foto direkt per QR-Code aufs Smartphone laden und
+								teilen. So bleiben die schönsten Momente gleich doppelt in Erinnerung.</p>
+						</section>
 					</div>
 				</div>
+
 			</section>
 
-			<!-- Contact -->
-			<section id="contact">
-				<div class="container">
-					<header>
-						<h2>Jetzt Fotobox sichern!</h2>
-						<p>Schreibt uns und reserviert eure Fotobox für Hochzeit, Geburtstag oder Firmenfeier. Wir freuen uns auf eure Nachricht!</p>
-					</header>
-					<section class="box contact">
-						<form name="kontakt" method="POST" action="https://formsubmit.co/faerberfabian@googlemail.com">
+		</section>
+
+		<!-- Main -->
+		<section id="main">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+
+						<!-- Services -->
+						<section id="services">
+							<header class="major">
+								<h2>Unsere Services</h2>
+								<p>Mehr als nur eine Fotobox – wir liefern euch das Rundum-Sorglos-Paket für Spaß, Stil
+									und bleibende Erinnerungen.</p>
+							</header>
+							<div class="row">
+								<div class="col-6 col-6-medium col-12-small">
+									<section class="box">
+										<a href="#" class="image featured"><img src="images/package-1511683_1280.jpg"
+												alt="" /></a>
+										<header>
+											<h3>Aufbauservice</h3>
+										</header>
+										<p>Wir liefern, bauen auf und holen wieder ab – ganz ohne Stress. Ihr müsst euch
+											um nichts kümmern, außer darum, gute Laune zu haben. So entspannt war
+											Erinnerungen sammeln noch nie!</p>
+									</section>
+								</div>
+								<div class="col-6 col-6-medium col-12-small">
+									<section class="box">
+										<a href="#" class="image featured"><img src="images/overlay_wedding.jpg"
+												alt="" /></a>
+										<header>
+											<h3>Individuelle Overlays</h3>
+										</header>
+										<p>Gebt euren Fotos den letzten Schliff! Wählt aus liebevoll gestalteten
+											Vorlagen oder bekommt ein personalisiertes Design, das perfekt zu eurem
+											Event passt.</p>
+									</section>
+								</div>
+								<div class="col-6 col-6-medium col-12-small">
+									<section class="box">
+										<a href="#" class="image featured"><img src="images/Drucker.png" alt="" /></a>
+										<header>
+											<h3>Professioneller Fotodrucker</h3>
+										</header>
+										<p>Mit unserem Fotodrucker in Studioqualität entstehen bis zu <strong>400
+												brillante Ausdrucke</strong> direkt vor Ort – gestochen scharf,
+											langlebig und perfekt für euer Gästebuch oder zum Mitnehmen.</p>
+									</section>
+								</div>
+								<div class="col-6 col-6-medium col-12-small">
+									<section class="box">
+										<a href="#" class="image featured"><img src="images/Accessoirs.jpg"
+												alt="" /></a>
+										<header>
+											<h3>Lustige Accessoires</h3>
+										</header>
+										<p>Ob Brillen, Hüte oder Schilder – unsere Accessoires machen jede Aufnahme
+											einzigartig. Hier entstehen keine 08/15-Fotos, sondern echte Erinnerungen
+											voller Spaß und Persönlichkeit!</p>
+									</section>
+								</div>
+							</div>
+						</section>
+
+					</div>
+
+					<!-- Galerie -->
+					<div class="col-12">
+						<section id="gallery">
+							<header class="major">
+								<h2>Galerie</h2>
+								<p>Echte Lacher. Echte Emotionen. Echte Erinnerungen.</p>
+							</header>
+							<div class="row">
+								<div class="col-6 col-12-small">
+									<section>
+										<a href="images/pexels-shkrabaanthony-7507067.jpg" class="image featured"><img
+												src="images/pexels-shkrabaanthony-7507067.jpg"
+												alt="Fotobox Party" /></a>
+									</section>
+								</div>
+								<div class="col-6 col-12-small">
+									<section>
+										<a href="images/overlay_wedding_withBG.jpg" class="image featured"><img
+												src="images/overlay_wedding_withBG.jpg" alt="Fotobox Hochzeit" /></a>
+									</section>
+								</div>
+								<div class="col-6 col-12-small">
+									<section>
+										<a href="images/party-balloons-in-front-of-faces.jpg"
+											class="image featured"><img
+												src="images/party-balloons-in-front-of-faces.jpg"
+												alt="Fotobox Spaß" /></a>
+									</section>
+								</div>
+								<div class="col-6 col-12-small">
+									<section>
+										<a href="images/pexels-polina-tankilevitch-5848780.jpg"
+											class="image featured"><img
+												src="images/pexels-polina-tankilevitch-5848780.jpg"
+												alt="Fotobox Event" /></a>
+									</section>
+								</div>
+							</div>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Contact -->
+		<section id="contact">
+			<div class="container">
+				<header>
+					<h2>Jetzt Fotobox sichern!</h2>
+					<p>Schreibt uns und reserviert eure Fotobox für Hochzeit, Geburtstag oder Firmenfeier. Wir freuen
+						uns auf eure Nachricht!</p>
+				</header>
+				<section class="box contact">
+					<!-- <form name="kontakt" method="POST" action="https://formsubmit.co/faerberfabian@googlemail.com">
 							<input type="hidden" name="_next" value="/success.html" />
 							<input type="hidden" name="_subject" value="Neue Anfrage – PhotoBox EBE" />
 							<input type="hidden" name="_template" value="table" />
@@ -188,31 +215,37 @@
 							<ul class="actions special">
 								<li><input type="submit" value="Anfrage senden" class="primary" /></li>
 							</ul>
-						</form>
-					</section>
-				</div>
-			</section>
+						</form> -->
+					<form action="https://formsubmit.co/faerberfabian@googlemail.com" method="POST">
+						<input type="text" name="name" required>
+						<input type="email" name="email" required>
+						<button type="submit">Send</button>
+					</form>
+				</section>
+			</div>
+		</section>
 
-			<!-- Footer -->
-			<section id="footer">
-				<div id="copyright">
-					<ul class="links">
-						<li>&copy; 2025 PhotoBox EBE – Fabian Färber. Alle Rechte vorbehalten.</li>
-						<li><a href="impressum.html">Impressum</a></li>
-						<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
-					</ul>
-				</div>
-			</section>
+		<!-- Footer -->
+		<section id="footer">
+			<div id="copyright">
+				<ul class="links">
+					<li>&copy; 2025 PhotoBox EBE – Fabian Färber. Alle Rechte vorbehalten.</li>
+					<li><a href="impressum.html">Impressum</a></li>
+					<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+				</ul>
+			</div>
+		</section>
 
-		</div>
+	</div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.dropotron.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
