email neuer Versuch

--- a/index.html
+++ b/index.html
@@ -217,10 +217,11 @@
 							</ul>
 						</form> -->
 					<form action="https://formsubmit.co/7c09ab62c94b2519074fa95e29c7cb23" method="POST">
-						<input type="text" name="name" required>
-						<input type="email" name="email" required>
-						<button type="submit">Send</button>
+						<input type="text" name="name" placeholder="Dein Name" required>
+						<input type="email" name="email" placeholder="Deine E-Mail" required>
+						<button type="submit">Senden</button>
 					</form>
+
 				</section>
 			</div>
 		</section>
