--- a/index.html
+++ b/index.html
@@ -217,11 +217,14 @@
 							</ul>
 						</form> -->
 					<form action="https://formsubmit.co/7c09ab62c94b2519074fa95e29c7cb23" method="POST">
+						WTF
+						<input type="hidden" name="_next" value="https://fotobox-ebe.online/success.html">
+						<input type="hidden" name="_captcha" value="false">
 						<input type="text" name="name" placeholder="Dein Name" required>
-						<input type="email" name="email" placeholder="Deine E-Mail" required>
+						<input type="email" name="email" placeholder="Deine E-Mail-Adresse" required>
+						<textarea name="message" placeholder="Deine Nachricht" required></textarea>
 						<button type="submit">Senden</button>
 					</form>
-
 				</section>
 			</div>
 		</section>
