--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 								<li><input type="submit" value="Anfrage senden" class="primary" /></li>
 							</ul>
 						</form> -->
-					<form action="https://formsubmit.co/35749c32db12ce5ae2ce528cbb336308" method="POST">					
+					<form action="https://formsubmit.co/faerberfabian@googlemail.com" method="POST">					
 						<input type="hidden" name="_next" value="https://fotobox-ebe.online/success.html">
 						<input type="hidden" name="_captcha" value="false">
 						<input type="text" name="name" placeholder="Dein Name" required>
